--- a/index.html
+++ b/index.html
@@ -13,73 +13,85 @@
 <body>
 
     <main class="courses">
-        <article class="item, starters">
-            <h1 class="name">Cabanossi with Beetrootcreme</h1>
-            <p class="short-description">Cabanossi med rødbedecreme og løg</p>
-            <div class="tags">
-                <h3 class="vegetarian">Vegetarian</h3>
-                <h3 class="allergens">Laktose</h3>
-            </div>
-            <p class="long-description hide">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
-            <div class="prices">
-                <h2 class="price cancelled">49 Kr.</h2>
-                <h2 class="discount-price">39 Kr.</h2>
-            </div>
-            <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
-            <button class="buy">ADD TO CART</button>
-            <button class="read-more">READ MORE</button>
-        </article>
+        <section id="starters">
+            <h1>Starters</h1>
+            <div id="articles">
+                <article class="item">
+                    <h2 class="name">Cabanossi with Beetrootcreme</h2>
+                    <p class="short-description">Cabanossi med rødbedecreme og løg</p>
+                    <div class="tags">
+                        <h3 class="vegetarian">Vegetarian</h3>
+                        <h3 class="allergens">Laktose</h3>
+                    </div>
+                    <p class="long-description hide">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
+                    <div class="prices">
+                        <p class="price cancelled">49 Kr.</p>
+                        <p class="discount-price">39 Kr.</p>
+                    </div>
+                    <div class="sold-out">
+                        <p>SOLD OUT</p>
+                    </div>
+                    <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
+                    <button class="buy">ADD TO CART</button>
+                    <button class="read-more">READ MORE</button>
+                </article>
 
-        <article class="item, main">
-            <h1 class="name">Bulgarian Farmers Soup</h1>
-            <p class="short-description">Cauceskus bulgarske bondesuppe</p>
-            <div class="tags">
-            </div>
-            <p class="long-description hide">Da Caucesku var i færd med at skrive sit navn med højhuse, var han nødt til at give håndværkerne solid kost, så de kunne arbejde 18 timer i døgnet, 7 dage om ugen: Bulgarsk bondesuppe. Suppen består af alt det bedste fra Bulgarien.</p>
-            <div class="prices">
-                <h2 class="price">99 Kr.</h2>
-            </div>
-            <img src="imgs/small//bulgarskbondesuppe-sm.jpg" alt="Cauceskus bulgarske bondesuppe">
-            <button class="buy">ADD TO CART</button>
-            <button class="read-more">READ MORE</button>
-        </article>
+                <article class="item">
+                    <h2 class="name">Bulgarian Farmers Soup</h2>
+                    <p class="short-description">Cauceskus bulgarske bondesuppe</p>
+                    <div class="tags">
+                    </div>
+                    <p class="long-description hide">Da Caucesku var i færd med at skrive sit navn med højhuse, var han nødt til at give håndværkerne solid kost, så de kunne arbejde 18 timer i døgnet, 7 dage om ugen: Bulgarsk bondesuppe. Suppen består af alt det bedste fra Bulgarien.</p>
+                    <div class="prices">
+                        <p class="price">99 Kr.</p>
+                    </div>
+                    <img src="imgs/small//bulgarskbondesuppe-sm.jpg" alt="Cauceskus bulgarske bondesuppe">
+                    <button class="buy">ADD TO CART</button>
+                    <button class="read-more">READ MORE</button>
+                </article>
 
-        <article class="item, dessert">
-            <h1 class="name">Kyrgyzian Roulade</h1>
-            <p class="short-description">Kirgisisk roulade bestående af nødder og rødkål</p>
-            <div class="tags">
-                <h3 class="vegetarian">Vegetarian</h3>
-                <h3 class="allergens">Laktose</h3>
-                <h3 class="allergens">Nødder</h3>
             </div>
-            <p class="long-description hide">I det nordlige Kirgisistan består en væsentlig del af kostpyramiden af forskellige kålvarianter og nødder. Mama Dushku fandt på denne ret, som en hyldest til det røde flag med hammer og segl.</p>
-            <div class="prices">
-                <h2 class="price">89 Kr.</h2>
-            </div>
-            <img src="imgs/small/kirgisiskroulade-sm.jpg" alt="Kirgisisk roulade bestående af nødder og rødkål">
-            <button class="buy">ADD TO CART</button>
-            <button class="read-more">READ MORE</button>
-        </article>
+        </section>
 
-        <article class="item, starters">
-            <h1 class="name">Glass of Red Wine</h1>
-            <p class="short-description">Et glas god Rødvin fra det tidligere USSR</p>
-            <div class="tags">
-                <h3 class="vegetarian">Vegetarian</h3>
-                <h3 class="alcohol">Alcohol 14.5</h3>
-                <h3 class="allergens">Laktose</h3>
+        <section id="mainc">
+            <h1>Main Courses</h1>
+            <div id="articles">
+            <article class="item">
+                <h2 class="name">Kyrgyzian Roulade</h2>
+                <p class="short-description">Kirgisisk roulade bestående af nødder og rødkål</p>
+                <div class="tags">
+                    <h3 class="vegetarian">Vegetarian</h3>
+                    <h3 class="allergens">Laktose</h3>
+                    <h3 class="allergens">Nødder</h3>
+                </div>
+                <p class="long-description hide">I det nordlige Kirgisistan består en væsentlig del af kostpyramiden af forskellige kålvarianter og nødder. Mama Dushku fandt på denne ret, som en hyldest til det røde flag med hammer og segl.</p>
+                <div class="prices">
+                    <p class="price">89 Kr.</p>
+                </div>
+                <img src="imgs/small/kirgisiskroulade-sm.jpg" alt="Kirgisisk roulade bestående af nødder og rødkål">
+                <button class="buy">ADD TO CART</button>
+                <button class="read-more">READ MORE</button>
+            </article>
+
+            <article class="item">
+                <h2 class="name">Glass of Red Wine</h2>
+                <p class="short-description">Et glas god Rødvin fra det tidligere USSR</p>
+                <div class="tags">
+                    <h3 class="vegetarian">Vegetarian</h3>
+                    <h3 class="alcohol">Alcohol 14.5</h3>
+                    <h3 class="allergens">Laktose</h3>
+                </div>
+                <p class="long-description hide">Huset Petrograd's rødvin er produceret før 1990, og lagret i de dybe saltminer (normalt forbeholdt defekte atomvåben) i Yekaterinburg. Det giver vinen en særdeles karakteristisk glød, der viser sig ved svag stearinlys-belysning.</p>
+                <div class="prices">
+                    <p class="price">49 Kr.</p>
+                </div>
+                <img src="imgs/small/roedvin-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
+                <button class="buy">ADD TO CART</button>
+                <button class="read-more">READ MORE</button>
+            </article>
             </div>
-            <p class="long-description hide">Huset Petrograd's rødvin er produceret før 1990, og lagret i de dybe saltminer (normalt forbeholdt defekte atomvåben) i Yekaterinburg. Det giver vinen en særdeles karakteristisk glød, der viser sig ved svag stearinlys-belysning.</p>
-            <div class="prices">
-                <h2 class="price">49 Kr.</h2>
-            </div>
-            <img src="imgs/small/roedvin-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
-            <button class="buy">ADD TO CART</button>
-            <button class="read-more">READ MORE</button>
-        </article>
+        </section>
 
     </main>
-    <script src="js/scripts.js"></script>
-</body>
-
-</html>
+    <script src="js/script.js"></script>
+</body></html>
