--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
                         <h2 class="name">Cabanossi with Beetrootcreme</h2>
                         <p class="short-description">Cabanossi med rødbedecreme og løg</p>
                         <div class="tags">
-                            <h3 class="vegetarian">Vegetarian</h3>
+                            <h3 class="vegetarian hide">Vegetarian</h3>
                             <h3 class="allergens">Laktose</h3>
                         </div>
-                        <p class="long-description hide">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
+                        <p class="long-description">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
                         <div class="prices">
-                            <p class="price cancelled">49 Kr.</p>
-                            <p class="discount-price">39 Kr.</p>
+                            <p class="price">49 Kr.</p>
+                            <p class="discount-price hide">39 Kr.</p>
                         </div>
-                        <div class="sold-out">
-                            <p>SOLD OUT</p>
-                        </div>
-                        <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
+                            <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="Cabanossi med rødbedecreme og løg">
                         <button class="buy">ADD TO CART</button>
                         <button class="read-more">READ MORE</button>
                     </article>
@@ -67,6 +64,4 @@
 
     </main>
     <script src="js/script.js"></script>
-</body>
-
-</html>
+</body></html>
