--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     </header>
 
     <main class="productlist">
-        <section id="starters">
+        <!--<section id="starters">
+            <h1>Starters</h1>-->
             <template id="product-template">
-                <section class="productbody">
+                <!--<section class="productbody">-->
                     <article class="item">
                         <h2 class="name">Cabanossi with Beetrootcreme</h2>
                         <img class="product-image" src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="">
@@ -39,9 +40,9 @@
                         <button class="buy">ADD TO CART</button>
                         <button class="read-more">READ MORE</button>
                     </article>
-                </section>
+                <!--</section>-->
             </template>
-        </section>
+        <!--</section>-->
 
     </main>
     <script src="js/script.js"></script>
