--- a/index.html
+++ b/index.html
@@ -21,29 +21,39 @@
     <main class="productlist">
         <!--<section id="starters">
             <h1>Starters</h1>-->
-            <template id="product-template">
-                <!--<section class="productbody">-->
-                    <article class="item">
-                        <h2 class="name">Cabanossi with Beetrootcreme</h2>
-                        <img class="product-image" src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="">
-                        <p class="short-description">Cabanossi med rødbedecreme og løg</p>
-                        <div class="tags">
-                            <h3 class="vegetarian hide">Vegetarian</h3>
-                            <h3 class="allergens">Laktose</h3>
-                        </div>
-                        <p class="long-description">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
-                        <div class="prices">
-                            <p class="price">49 Kr.</p>
-                            <p class="discount-price hide">39 Kr.</p>
-                        </div>
+        <template id="product-template">
+            <!--<section class="productbody">-->
+            <article class="item">
+                <h2 class="name">Cabanossi with Beetrootcreme</h2>
+                <img class="product-image" src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="">
+                <p class="short-description">Cabanossi med rødbedecreme og løg</p>
+                <div class="tags">
+                    <h3 class="vegetarian hide">Vegetarian</h3>
+                    <h3 class="allergens">Laktose</h3>
+                </div>
+                <p class="long-description">Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.</p>
+                <div class="prices">
+                    <p class="price">49 Kr.</p>
+                    <p class="discount-price hide">39 Kr.</p>
+                </div>
 
-                        <button class="buy">ADD TO CART</button>
-                        <button class="read-more">READ MORE</button>
-                    </article>
-                <!--</section>-->
-            </template>
+                <button class="buy">ADD TO CART</button>
+                <button class="read-more">READ MORE</button>
+            </article>
+            <!--</section>-->
+        </template>
         <!--</section>-->
 
     </main>
+
+    <div class="modal-background hide">
+        <div class="modal-content">
+            <h3 class="modal-name">NAME</h3>
+            <img src="" alt="" class="modal-image" />
+            <p class="modal-description">LONG DESCRIPTION</p>
+            <h4 class="modal-price">PRICE</h4>
+        </div>
+    </div>
+
     <script src="js/script.js"></script>
 </body></html>
